--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,18 +9,18 @@ description = "Routine utilities for image processing and visualization."
 authors = ["Zac Swider <zac.swider@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-
-[tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+
+[tool.poetry.extras]
+testing = ["pytest", "pytest-cov", "tox"]
+
 
 [tool.poetry.urls]
 "Repository" = "https://github.com/zacswider/routine_image_kit"
